--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="card">
                               <div class="card-image">
                                 <img src="images/customer.jpg" class="lunch-tuesday">
-                                <span class="card-title">TUESDAY SPECIALS</span>
+                               <!--<span class="card-title">TUESDAY SPECIALS</span>-->
                               </div>
                               <div class="card-content">
                                 <p>Every TUESDAY is  customers appreciation  day lunch special!</p>
@@ -108,7 +108,7 @@
                       <div class="card">
                         <div class="card-image">
                           <img src="images/lunch.jpg">
-                          <span class="card-title">LUNCH SPECIALS</span>
+                         <!-- <span class="card-title">LUNCH SPECIALS</span>-->
                         </div>
                         <div class="card-content">
                           <p>Daily lunch special with soda</p>
@@ -127,7 +127,7 @@
                           <div class="card">
                             <div class="card-image">
                               <img src="images/coffee.jpg">
-                              <span class="card-title">Free Coffee</span>
+                            <!--  <span class="card-title">Free Coffee</span>-->
                             </div>
                             <div class="card-content">
                               <p>For every purchase of a breakfast meal you get a hot cup of coffee</p>
@@ -237,7 +237,7 @@
 </section>
 
 <section class="map">
-  <div class="row">
+  <div class="row mapinfo">
     <div class="col s12 l12">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3580.9027222014515!2d-80.24499349999999!3d26.1672974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d907a7630b6783%3A0x8b14ad72f44df80d!2sBulla%20King%20Bakery!5e0!3m2!1sen!2sus!4v1586788419166!5m2!1sen!2sus" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
